2007-10-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/printoperation_relationshipsoverview.
	cc: Fix the build for the latest goocanvasmm API, though all this 
	code has been reworked in the glom-precise-printouts branch.

2007-10-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/printoperation_relationshipsoverview.
	cc: Get the bounds of the root item rather than of the whole canvas, 
	for more suitable scaling.

2007-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.h:
	* glom/relationships_overview/printoperation_relationshipsoverview.
	cc: scale before printing, because that is how cairo works.

2007-10-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade:
	* glom/relationships_overview/Makefile.am:
	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	* glom/relationships_overview/printoperation_relationshipsoverview.
	cc:
	* glom/relationships_overview/printoperation_relationshipsoverview.
	h: Some basic printing support for the relationships overview 
        (via a menu item in the dialog, which 
	is probably bad UI, but I don't like the idea of extra buttons either).
	It currently does not scale to fit the page, and does not offer 
	landscape printing.

2007-10-04  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on goocanvasmm.
	* glom/main.cc: initialize goocanvasmm if not in client-only mode.
	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	Use C++ types as much as possible (often using Glib::wrap() instead of 
	the goocanvasmm constructors, because they are currently broken), and 
	generally clean up this code a bit.

2007-10-01  Armin Burgmeier  <armin@openismus.com>
